# morfessor-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config  flatcat  morfessor  morfessor-demo  morfessor-demo.wsgi  morfessor_demo.py
data/: CMakeLists.txt  make_new_package.sh
static/: index.html
static/static/: morf.js  style.css
